# gadget-analysis

./: .gitignore  Makefile  README.md  allvars.c  allvars.h  analysis.c  analysis_magnetic_field.c  auxfuns.h  auxiliary_functions.c  auxiliary_functions.h  b_pdf.c  check_code.py  check_flag.c  conv.c  corr.c  correlation.c  correlatoin.c  cosmic_ray_analysis.c  cosmology.c  cre.c  debug.c  debug.h  density.c  density_analysis.c  field.c  fof.c  gadget-analysis.in  gas_density.c  gas_density_analysis.c  gas_ratio.c  gas_state.c  gas_temp.c  gen_add_params.h.py  gen_allvars.c.py  grid.c  group_analysis.c  group_gas_ratio.c  group_plot.c  group_radio.c  group_temp.c  (+64 more)
code_bak/: change_npart.c
fish/: index2z.fish
g2_bin2hdf5/: Makefile  g2_bin2hdf5  g2_bin2hdf5.c  parameters  parameters-usedvalues  parameters.bak  parameters.bak-usedvalues  plot.py
gadget-header/: Makefile  gadget-header  gadget-header.c
group_tracing/: Makefile  group_tracing.c
gsl_test/: Makefile  gsl_test  plot_gsl_test.py
hybrid_test/: mywatch.sh
python_tools/: b_statistics.py  beta_root.py  calc_radio.py  change_pic_res.py  check_cre_props.py  colormap.py  compare_elecspec_c_py.py  compare_powspec.py  compare_radio_c_py.py  cos_and_const.py  cosmo_info.py  cosmo_time.py  cre_n_e.py  csv_to_tex.py  df_stati.py  elec_cooling.py  electron_cool_time.py  gas_prop.py  gas_ratio.py  gen_time_list.in  gen_time_list.py  mag_hist.py  make_gif.py  my_work_env.py  myfont.py  myplot.py  paper_comp_group.py  paper_plot_Mpdf.py  paper_plot_Tpdf.py  paper_plot_bpdf.py  (+81 more)
vtk3d/: CMakeLists.txt  Makefile
(+20 files in other folders)
